fix: correção do menu, coreeção do overflow

--- a/src/main/resources/static/css/gerenciarImovel.css
+++ b/src/main/resources/static/css/gerenciarImovel.css
@@ -9,17 +9,102 @@
 body { font-family: sans-serif; color: var(--dark); background: var(--light-grey); }
 .container { display: flex; height: 100vh; }
 /* SIDEBAR */
-.sidebar {
-    width: var(--sidebar-width);
-    background: #e6f2eb;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
+aside {
+  width: 220px;
+  background-color: #e6f1ec;
+  padding: 20px;
+  display: grid;
+  height: 100%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  grid: 'logo'
+		'nav'
+		'gap'
+		'perfil';
+  grid-template-rows: 15% 60% 10% 20%;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-shrink: 0;
 }
-.sidebar .logo { display: flex; align-items: center; margin-bottom: 2rem; }
-.sidebar .logo img { width: 32px; margin-right: .5rem; }
-.sidebar nav a,
-.sidebar .profile a { display: block; margin: .5rem 0; color: var(--dark); text-decoration: none; }
+
+.logo {
+  display: flex;
+  grid-area: logo;
+  align-items: center;
+  gap: 2px;
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 20px;
+  margin-left: 20px;
+  justify-content: center;
+  align-items: center;;
+  width: 100px;
+  height: 100px;
+}
+
+.logo span {
+	color: #009966;
+	margin-left: 4px;
+}
+
+.logo-img {
+	width: 180px;
+	height: auto;
+	align-self: center;
+}
+
+nav {
+	grid-area: nav;
+}
+nav ul {
+  list-style: none;
+}
+
+nav ul li {
+  margin-bottom: 10px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #000;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+nav ul li a .material-icons,
+.perfil a .material-icons {
+  font-size: 18px;
+  color: #777;
+}
+
+.perfil {
+  grid-area: perfil;
+  margin-bottom: 30px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-end
+}
+
+.perfil h4 {
+  margin-bottom: 10px;
+}
+
+.perfil a {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 10px;
+  text-decoration: none;
+  color: #000;
+  font-size: 16px;
+}
+
 /* LAYOUT PRINCIPAL */
 .layout { flex: 1; display: flex; flex-direction: column; }
 /* HEADER */
